cmake_minimum_required(VERSION 3.22)
project(project)

set(CMAKE_CXX_STANDARD 14)

add_executable(project main.cpp)

add_executable(jisqi jisqi.cpp client.cpp test.cpp)



add_executable(client head/client.h client.cpp test.cpp)
add_executable(point point.cpp)
add_executable(protos protos.cpp)
add_executable(public public.cpp)
add_executable(xianding xianding.cpp)
add_executable(stock head/stock.h stock.cpp unstock.cpp)
add_executable(xyz head/xyz.h xyz.cpp unxyz.cpp)
add_executable(8.1 duotai/8.1.cpp)
add_executable(8.2 duotai/8.2.cpp)
add_executable(8.4 duotai/8.4.cpp)
add_executable(bank five/bank.cpp)
add_executable(birthday review/birthday.cpp)
add_executable(colck five/colck.cpp)
add_executable(const five/const.cpp)
add_executable(Point five/Point.cpp)
add_executable(pool five/pool.cpp)
add_executable(rabbit five/rabbit.cpp)
add_executable(rank five/rank.cpp)
add_executable(student five/student.cpp)
add_executable(unit five/unit.cpp)
add_executable(line five/line.cpp)
add_executable(7.2 review/7.2.cpp)
add_executable(7.3 review/7.3.cpp)
add_executable(7.4 review/7.4.cpp)
add_executable(7.5 review/7.5.cpp)
add_executable(12.2-1 jicheng/12.2-1.cpp)
add_executable(derive jicheng/derive.cpp)
add_executable(eryi jicheng/eryi.cpp)
add_executable(many jicheng "jicheng/many jicheng.cpp")
add_executable(car jicheng/car.cpp)
add_executable(protected jicheng/protected.cpp)
add_executable(students jicheng/students.cpp)
add_executable(lab4_1 lab4/lab4_1.cpp)
add_executable(lab4_2 lab4/lab4_2.cpp)
add_executable(lab4_3 lab4/lab4_3.cpp)
add_executable(lab5_1 lab5/lab5_1.cpp)
add_executable(lab5_4 lab5/lab5_4.cpp)
add_executable(lab5_5 lab5/lab5_5.cpp)
add_executable(lab5_6 lab5/lab5_6.cpp)
add_executable(bank1 lab6/bank1.cpp)
add_executable(lab6_1 lab6/lab6_1.cpp)
add_executable(lab6_2 lab6/lab6_2.cpp)
add_executable(lab6_3 lab6/lab6_3.cpp)
add_executable(lab6_4 lab6/lab6_4.cpp)
add_executable(lab6_5 lab6/lab6_5.cpp)
add_executable(lab6_6 lab6/lab6_6.cpp)
add_executable(lab6_7 lab6/lab6_7.cpp)
add_executable(lab6_8 lab6/lab6_8.cpp)
add_executable(lab7_1 lab7/lab7_1.cpp)
add_executable(lab7_2 lab7/lab7_2.cpp)
add_executable(lab7_3 lab7/lab7_3.cpp)
add_executable(lab7_4 lab7/lab7_4.cpp)
add_executable(lab7_5 lab7/lab7_5.cpp)
add_executable(lab8_1 lab8/lab8_1.cpp)
add_executable(lab8_2 lab8/lab8_2.cpp)
add_executable(lab8_3 lab8/lab8_3.cpp)
add_executable(3.6.1 learn/3.6.1.cpp)
add_executable(congzai1 learn/congzai1.cpp)
add_executable(congzai learn/congzai.cpp)
add_executable(friend learn/friend.cpp)
add_executable(friendclass learn/friendclass.cpp)
add_executable(friendmember learn/friendmember.cpp)
add_executable(new review/new.cpp)
add_executable(space learn/space.cpp)
add_executable(sta learn/sta.cpp)
add_executable(static learn/static.cpp)
add_executable(6-5 review/6-5.cpp)
add_executable(6-8 six/6-8.cpp)
add_executable(array six/array.cpp)
add_executable(2-27 timu/2-27.cpp)
add_executable(2-29 timu/2-29.cpp)
add_executable(2-31 timu/2-31.cpp)
add_executable(3-12 review/3-12.cpp)
add_executable(3-14 review/3-14.cpp)
add_executable(4-1 review/4-1.cpp)
add_executable(4-7 review/4-7.cpp)

add_executable(7-1 review/7-1.cpp)

add_executable(7-6 review/7-6.cpp)
add_executable(Bank review/Bank.cpp)
add_executable(9.1 nine/9.1.cpp)
add_executable(5.4 review/5.4.cpp)
add_executable(5.5 review/5.5.cpp)